--- a/.env
+++ b/.env
@@ -2,6 +2,8 @@
 TOKEN=1234567890:xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 ADMIN_IDS=xxxxxxxxx
 USER_IDS=xxxxxxxxx,xxxxxxxxx,xxxxxxxxx
+
+# Ollama Settings
 INITMODEL=llama3
 TIMEOUT=3000
 
